# readpfad

./: .gitignore  README.md
01_the_small_free_number/: Minfree.hs  README.lhs  cabal.sandbox.config  minfree.cabal
01_the_small_free_number/bench/: Bench.hs
01_the_small_free_number/test/: MinfreeSpec.hs
02_a_surpassing_problem/: Msc.hs  README.lhs  msc.cabal
02_a_surpassing_problem/test/: MscSpec.hs
03_improving_on_saddleback_search/: Invert.hs  README.lhs  invert.cabal
03_improving_on_saddleback_search/test/: InvertSpec.hs
04_a_selection_problem/: Smallest.hs  smallest.cabal
05_sorting_pairwise_sum/: Sortsums.hs  sortsums.cabal
06_making_a_century/: Solutions.hs  solutions.cabal
07_building_a_tree_with_minimum_height/: MincostTree.hs  mincosttree.cabal
08_unravelling_greedy_algorithms/: Supravel.hs  supravel.cabal
08_unravelling_greedy_algorithms/test/: SupravelSpec.hs
21_hylomorphisms_and_nexuses/: Hylomorphism.hs  hylomorphism.cabal
26_the_schorr_waite_algorithm/: Mark.hs  mark.cabal
28_loopless_functional_algorithms/: Loopless.hs  loopless.cabal
