name:          mincosttree
version:       0.0.0
cabal-version: >= 1.10
build-type:    Simple
author:        Shohei Murayama
maintainer:    shohei.murayama@gmail.com
synopsis:      An implementation of Chapter 7 "Building a tree with minimal height"
               of "Pearls of Functional Algorithm Design"

library
  build-depends:       base >= 4
                     , array >= 0.4
  default-language:    Haskell2010
  exposed-modules:     Invert
  ghc-options:         -Wall
                       -O2
  hs-source-dirs:      . 

{-
test-suite spec
  type:                exitcode-stdio-1.0
  build-depends:       base >= 4
                     , hspec
                     , hspec-expectations
                     , QuickCheck
                     , smallest
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -O2
  hs-source-dirs:      test
  main-is:             Spec.hs
-}
