name:          hylomorphism
version:       0.0.0
cabal-version: >= 1.10
build-type:    Simple
author:        Shohei Murayama
maintainer:    shohei.murayama@gmail.com
synopsis:      An implementation of Chapter21 "Hylomorphism" of "Pearls of Functional Algorithm Design"

library
  build-depends:       base >= 4
                     , array >= 0.4
  default-language:    Haskell2010
  exposed-modules:     Hylomorphism
  ghc-options:         -Wall
                       -O2
  hs-source-dirs:      . 

{-
test-suite spec
  type:                exitcode-stdio-1.0
  build-depends:       base >= 4
                     , array >= 0.4
                     , hspec
                     , hspec-expectations
                     , minfree
                     , QuickCheck
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -O2
  hs-source-dirs:      test
  main-is:             Spec.hs

benchmark bench
  type:                exitcode-stdio-1.0
  build-depends:       base >= 4
                     , array
                     , criterion
                     , deepseq
                     , minfree
                     , mtl
                     , parallel
                     , random
  default-language:    Haskell2010
  ghc-options:         -O2
                       -Wall
                       -threaded
  hs-source-dirs:      bench
  main-is:             Bench.hs
-}

